# pad2_project_sensordata

./: .gitignore  CMakeLists.txt  Doxyfile.in  LICENSE  README.md  names.txt
common/: CMakeLists.txt
common/demo/: CMakeLists.txt  hello_world.c  main.c  main_main.c  test_data_conversion.c  test_main.c  test_readFile  test_readFile.c  test_structure.c  tmp.txt
common/include/: my_file_io.h  my_graphics.h  my_helpers.h  my_structure.h  my_validation.h  sensor_config.h
common/include/list/: list.h
common/include/my_file_io/: my_file_io.h
common/include/my_graphics/: my_graphics.h
common/include/my_helpers/: my_helpers.h
common/include/my_validation/: my_validation.h
common/include/person/: person.h
common/src/: CMakeLists.txt  my_file_io.c  my_graphics.c  my_helpers.c  my_structure.c  my_validation.c
common/src/list/: CMakeLists.txt  list.c
common/src/my_file_io/: CMakeLists.txt  my_file_io.c
common/src/my_graphics/: CMakeLists.txt  my_graphics.c
common/src/my_helpers/: CMakeLists.txt
common/src/my_validation/: CmakeLists.txt  my_validation.c
common/src/person/: CMakeLists.txt  person.c
common/src/structure/: CMakeLists.txt  structure.c
documentation/: Project_outline.md  documention.md  project_update.md  protokoll.md
documentation/project_management/: TODO+NOTES.md
documentation/project_management/help/: HOW TO_USEFULL LINKS  markdown_help.md
documentation/project_management/snippets/: file.c  parsing1.c  parsing2.c  possible_solutions
project_management/: TODO+NOTES.md
project_management/help/: HOW TO; USEFULL LINKS  Text_rules.md  markdown-help.md
ressources/: Test_Data_20k_IMU-LSM9DS1 (1).csv  data.csv  destination.csv  error_log.csv  raw_Data.csv  simple_read_CSV_in_struct_array.c  source_data.csv  test_data.csv  test_data_short.csv
temp_data/: filefunctions.c  whatamI.md
tmp/: clean_data.csv  raw_data.csv
